--- a/config/database.yml
+++ b/config/database.yml
@@ -21,15 +21,18 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
+  username: santiagopuricelli
+  password: homerolandia22
+
 development:
   <<: *default
-  database: Couch_in_development
+  database: couchinn_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: Couch_in
+  #username: couchinn
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Couch_in_test
+  database: couchinn_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: Couch_in_production
-  username: Couch_in
-  password: <%= ENV['COUCH_IN_DATABASE_PASSWORD'] %>
+  database: couchinn_production
+  username: couchinn
+  password: <%= ENV['COUCHINN_DATABASE_PASSWORD'] %>
